# layerbylayer-server

./: Dockerfile  docker-compose.yaml  pyproject.toml
src/: __main__.py
src/controllers/temperature_controller/: temperature_controller.py
src/dependencies/: session_dependency.py
src/statistic_storage/: env.py  statistic_storage.py
src/statistic_storage/abstract/: dtos.py  models.py
src/statistic_storage/mapper/: mapper.py
src/statistic_storage/service/: statistic_storage.py
src/statistic_storage/service/temperature_service/: temperature_service.py
src/statistic_storage/storage_session/: storage_session.py
src/statistic_storage/temperature_service/: temperature_service.py
src/statistic_storage/temperature_storage/: temperature_storage.py
